--- a/src/css/global.css
+++ b/src/css/global.css
@@ -9,3 +9,32 @@
 .font-inter {
   font-family: 'Inter', sans-serif
 }
+
+.item-container {
+  width: 100%;
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  gap:0.5rem
+}
+
+.item-title {
+  font-family: 'Inter', sans-serif;
+  text-transform: uppercase;
+  font-size: 0.65rem;
+  line-height: 1rem;
+  font-weight: 500;
+}
+
+.item-thumbnail {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.selection.item-thumbnail {
+  width: 6rem;
+  height: auto;
+  aspect-ratio: 3/4;
+  object-fit: contain;
+}
