--- a/src/css/global.css
+++ b/src/css/global.css
@@ -32,9 +32,16 @@
   object-fit: contain;
 }
 
+.selection.item-container {
+  width: 100%;
+  height: 100%;
+  gap:0.5rem
+}
+
 .selection.item-thumbnail {
   width: 6rem;
   height: auto;
+  display: flex;
   aspect-ratio: 3/4;
   object-fit: contain;
 }
