--- a/src/css/global.css
+++ b/src/css/global.css
@@ -33,15 +33,12 @@
 }
 
 .selection.item-container {
-  width: 100%;
-  height: 100%;
-  gap:0.5rem
+  width: 6rem;
+  height: auto;
 }
 
 .selection.item-thumbnail {
-  width: 6rem;
+  width: 100%;
   height: auto;
-  display: flex;
-  aspect-ratio: 3/4;
   object-fit: contain;
 }
