--- a/src/css/layout-nav.css
+++ b/src/css/layout-nav.css
@@ -7,7 +7,7 @@
   font-weight: 500;
   line-height: 1rem;
 
-  position: fixed;
+  position: absolute;
   width: 100vw;
   bottom: 0;
   height: 2rem;
