--- a/src/about/global.css
+++ b/src/about/global.css
@@ -1,3 +1,57 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+::-webkit-scrollbar{
+  display: none;
+}
+
+.font-inter {
+  font-family: 'Inter', sans-serif
+}
+
+.item-container {
+  width: 100%;
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  gap:0.5rem
+}
+
+.item-title {
+  font-family: 'Inter', sans-serif;
+  text-transform: uppercase;
+  font-size: 0.65rem;
+  line-height: 1rem;
+  font-weight: 500;
+}
+
+.item-thumbnail {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.selection.item-container {
+  width: auto;
+  height: 4rem;
+}
+
+.selection.item-thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.overview-main-layout {
+  display: grid;
+  grid-template-columns: repeat(9, minmax(0, 1fr));
+  grid-auto-rows: max-content;
+  gap:1rem;
+
+  width: 100%;
+  min-height: 50vh;
+}
+
 .navigation-layout {
   
   background-color: white;
@@ -64,4 +118,15 @@
   } to {
     transform: translateX(0%);
   }
+}
+
+.fade-in {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  pointer-events: none;
 }
