--- a/src/css/layout-main.css
+++ b/src/css/layout-main.css
@@ -1,8 +1,9 @@
 .overview-main-layout {
   display: grid;
-  grid-template-columns: repeat(9, minmax(0, 1fr));
+  grid-template-columns: repeat(12, minmax(0, 1fr));
   grid-auto-rows: max-content;
-  gap:1rem;
+  column-gap:1rem;
+  row-gap: 5rem;
 
   width: 100%;
   min-height: 50vh;
