--- a/src/css/layout-nav.css
+++ b/src/css/layout-nav.css
@@ -14,9 +14,10 @@
   padding-left: 1rem;
   padding-right: 1rem;
   gap: 1rem;
+  z-index: 20;
 
   display: grid;
-  grid-template-columns: repeat(9, minmax(0, 1fr));
+  grid-template-columns: repeat(12, minmax(0, 1fr));
   grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
