--- a/src/css/page-transition.css
+++ b/src/css/page-transition.css
@@ -42,10 +42,15 @@
 
 .overview.content .item-container{
   transform: translateY(0vh);
-  animation: show-projects 1.5s cubic-bezier(.34,.46,0,.98); /* Add a smooth transition */
+  animation: overview-show-projects 1.5s cubic-bezier(.34,.46,0,.98); /* Add a smooth transition */
 }
 
-@keyframes show-projects {
+.selection.content .item-container {
+  transform: translateY(0%);
+  animation: selection-show-projects cubic-bezier(.34,.46,0,.98); /* Add a smooth transition */
+}
+
+@keyframes overview-show-projects {
   from {
     transform: translateY(100vh);
   } to {
@@ -53,16 +58,27 @@
   }
 }
 
+@keyframes selection-show-projects {
+  from {
+    transform: translateY(-100%);
+  } to {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes selection-show-canvas {
+  from {
+    opacity: 0;
+  } to {
+    opacity: 1;
+  }
+}
+
 @keyframes show-line {
+
   from{
     transform: translateY(100%);
   } to {
     transform: translateY(0%);
   }
 }
-
-
-
-
-
-
