--- a/src/css/layout-main.css
+++ b/src/css/layout-main.css
@@ -1,11 +1,26 @@
 .overview-main-layout {
   display: grid;
-  grid-template-columns: repeat(12, minmax(0, 1fr));
   grid-auto-rows: max-content;
   column-gap:1rem;
-  row-gap: 5rem;
-
+  
   width: 100%;
   min-height: 50vh;
+}
+
+
+@media (min-width: 768px) {
+  .overview-main-layout{
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    row-gap: 5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .overview-main-layout{
+    padding-top: 8rem;
+    grid-template-columns: repeat(2, minmax(0, 8rem));
+    row-gap: 4rem;
+    column-gap: 2rem;
+  }
 }
   
