--- a/src/css/page-transition.css
+++ b/src/css/page-transition.css
@@ -47,7 +47,6 @@
 
 .selection.content .item-container {
   transform: translateY(0%);
-  animation: selection-show-projects cubic-bezier(.34,.46,0,.98); /* Add a smooth transition */
 }
 
 @keyframes overview-show-projects {
@@ -66,6 +65,14 @@
   }
 }
 
+@keyframes mobile-selection-show-projects {
+  from {
+    opacity: (0);
+  } to {
+    opacity: (1);
+  }
+}
+
 @keyframes selection-show-canvas {
   from {
     opacity: 0;
@@ -75,10 +82,21 @@
 }
 
 @keyframes show-line {
-
   from{
     transform: translateY(100%);
   } to {
     transform: translateY(0%);
+  }
+}
+
+@media (min-width: 768px) {
+  .selection.content .item-container {
+    animation: selection-show-projects cubic-bezier(.34,.46,0,.98); /* Add a smooth transition */
+  }
+}
+
+@media (max-width: 768px) {
+  .selection.content .item-container {
+    animation: show-line cubic-bezier(.34,.46,0,.98); /* Add a smooth transition */
   }
 }
