--- a/src/css/layout-nav.css
+++ b/src/css/layout-nav.css
@@ -31,6 +31,8 @@
   .navigation-layout {
     top: 0;
     display: flex;
+    align-items:center; 
+    justify-content:center;
     gap: 1rem;
   }
   
