--- a/src/css/global.css
+++ b/src/css/global.css
@@ -10,171 +10,8 @@
   font-family: 'Inter', sans-serif
 }
 
-.item-container {
-  width: 100%;
-  height: 12rem;
-  display: flex;
-  flex-direction: column;
-  gap:0.5rem
-}
-
-.item-title {
-  font-family: 'Inter', sans-serif;
-  text-transform: uppercase;
-  font-size: 0.65rem;
-  line-height: 1rem;
-  font-weight: 500;
-}
-
-.item-thumbnail {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-}
-
-.selection.item-thumbnail {
+#app {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  background-color: white;
 }
-
-.about.content header{
-  position: absolute;
-  padding: 1rem;
-
-  display: grid;
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-  grid-template-rows: repeat(1, minmax(0, 1fr));
-  text-transform: uppercase;
-  font-weight: 500;
-}
-
-.about.content .line{
-  overflow-y: hidden;
-  width: max-content;
-}
-
-.about.content .contact{
-  column-span: 3;
-  display: flex;
-  flex-direction: column;
-  line-height: 1rem;
-  z-index: 50;
-}
-
-.about.content .social{
-  grid-column-start: 9;
-  text-transform: uppercase;
-  line-height: 1rem;
-  display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-  grid-template-rows: repeat(4, minmax(0, 1fr));
-  row-gap: 0.25rem;
-}
-
-.about.content main {
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  place-items: center;
-}
-
-.about.content main .caption {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  letter-spacing: 0.025em;
-  text-transform: uppercase;
-  font-weight: 500;
-}
-
-.selection.content {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  overflow: hidden;
-}
-.selection.content canvas{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-}
-
-.selection.content .main-image-container{
-  overflow: hidden;
-  /* gap: 1rem; */
-}
-
-@media (min-width: 768px) {
-
-  .about.content header {
-    top: 0;
-  }
-  .selection.content{
-    flex-direction: column;
-    gap: 6rem;
-    padding-bottom: 2rem;
-  }
-  .selection.content canvas{
-    width: 100%;
-    height: 100%;
-  }
-  .selection.content .main-image-container{
-    height: 100%;
-    width: 100vw;
-  }
-
-  .selection.content .main-image{
-    width: 100%;
-    height: 100%;
-  }
-  .selection.item-container {
-    width: auto;
-    height: 4rem;
-  }
-  
-}
-
-@media (max-width: 768px) {
-  .about.content header {
-    bottom: 0;
-  }
-  .about.content .social{
-    text-transform: uppercase;
-    line-height: 1rem;
-    display: grid;
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-    grid-template-rows: repeat(6, minmax(0, 1fr));
-    row-gap: 0.25rem;
-  }
-  
-  .selection.content{
-    width: 100vw;
-    height:100vh;
-    overflow:hidden; 
-    flex-direction: column-reverse;
-    justify-content:center;
-  }
-  .selection.content .main-image-container{
-    display: grid;
-    place-items:center;
-    height: 100%;
-    width: 100%;
-    gap: 1rem;
-    padding-left: 1rem;
-    padding-right:1rem;
-  }
-
-  .selection.content .main-image{
-    width: 100%;
-    height: auto;
-    aspect-ratio : 3/4;
-  }
-  .selection.item-container {
-    width: auto;
-    height: 6rem;
-  }
-}
-
