--- a/src/css/overview-page-style.css
+++ b/src/css/overview-page-style.css
@@ -1,3 +1,25 @@
+.item-container {
+  width: 100%;
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  gap:0.5rem;
+}
+
+.item-title {
+  font-family: 'Inter', sans-serif;
+  text-transform: uppercase;
+  font-size: 0.65rem;
+  line-height: 1rem;
+  font-weight: 500;
+}
+
+.item-thumbnail {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
 .overview-main-layout {
   display: grid;
   grid-auto-rows: max-content;
